traefik/v3-6-3/kubernetes-crd-rbac.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
